feat: add curriculo

--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
         </a>
         <a class="button" href="https://www.linkedin.com/in/kathelyn-cau%C3%A2ne-de-oliveira-zanin-608b68346/" target="_blank">
             <i class="fab fa-linkedin"></i> LinkedIn
+
+        <a href="Currículo .pdf" dowload="Currículo.pdf" class="button">
+            <i class="fas fa-file-download"></i> Baixar Currículo
+
+
         </a>
     </div>
 
