--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </div>
 
     <div class="education-container">
-        <h2>Formação Acadêmica</h2>
+        <h2>Formação Acadêmica e Certificados</h2>
         <div class="education">
             <div class="degree balloon">
                 <h3>FATEC</h3>
@@ -87,14 +87,16 @@
 
 
             <div class="degree balloon" >
+                <i class="fas fa-graduation-cap"></i> <!-- Ícone de certificado -->
                 <h3>ETEC</h3>
                 <p>Técnico em Administração</p>
                 <p>Concluído</p>
                 </div>
 
             <div class="degree balloon" >
+                <i class="fas fa-graduation-cap"></i> <!-- Ícone de certificado -->
                 <h3>ESCOLA DE INOVADORES</h3>
-                <P>Curso sobre inovação e criatividade</P>
+                <P>Curso sobre inovação</P>
                 <p>Concluido</p>
             </div>
             </div>
